src/components/layout/Member.module.scss
.container {
  position: relative;

  user-select: none;
  cursor: pointer;
}

.dropdown {
  position: absolute;

  top: 100%;
  right: 0;

  border: 2px solid lightgray;
  border-radius: 0.5rem;
  background-color: white;
  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);

  white-space: nowrap;

  transition: opacity 0.2s;

  & > * {
    display: flex;
    align-items: center;
    gap: 0.5rem;
    font-size: medium;
    padding: 0.5rem 1rem;
  }

  & > *:not(:last-child) {
    border-bottom: 1px solid lightgray;
  }
}

.icon {
  padding: 1rem;
}

.name {
  font-weight: bold;
}

